--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                     <p>Kalikiri</p>
                     <br>
                     <h5>Person of Contact: </h5>
-                    <p></p>
+                    <p>khateebmotors6@gmail.com</p>
+
                 </div>
                 <div class="filter-container">
     
